# rnet

./: LICENSE  README.md  rnet.sln
.github/workflows/: CI.yml
native/rnet/: Cargo.toml
native/rnet/.cargo/: config.toml
native/rnet/src/: lib.rs  md5.rs  rand.rs
src/: common.props  rnet.sln
src/rnet/: Md5Native.cs  NativeMethods.cs  Rand.cs  Usings.cs  rnet.csproj
src/rnet.Benchmark/: MD5Benchmark.cs  RandFillBenchmark.cs  rnet.Benchmark.csproj
src/rnet.Benchmark.Test/: BenchmarkTest.cs  rnet.Benchmark.Test.csproj
src/rnet.Tests/: Md5Test.cs  RandTest.cs  Usings.cs  rnet.Tests.csproj
