[package]
name = "rnet"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.126"
digest = { version = "0.10.3", optional = true }
rand = { version = "0.8.5", optional = true }
md-5 = { version = "0.10.1", optional = true }

[target.'cfg(all(unix, any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
md-5 = { version = "0.10.1", features = ["asm"], optional = true }

[profile.release]
lto = true
strip = true

[lib]
name = "rnet_native"
crate-type = ["cdylib"]

[features]
default = ["rand", "hash"]
rand = ["dep:rand"]
hash = ["digest","md5"]
md5 = ["md-5"]
